--- a/Resume-website-main/index.html
+++ b/Resume-website-main/index.html
@@ -17,7 +17,7 @@
         <p id="contact">+91 7204031513</p>
     </div>
     <div class="profile" allign="left">
-        <img src="profile.png" width="100" height="100" margin="76" allign="left" cellspacing="50">
+        <img src="profile.jpg" width="100" height="100" margin="76" allign="left" cellspacing="50">
     </div>
     <div class="left">
     </div>
